# buic

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: args.rs  buienradar.rs  lib.rs  main.rs  precipitation.rs
