[package]
name = "buic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.196",features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
