[package]
name = "buic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.199",features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1", features = ["full"] }
